srv/sharelatex/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: sharelatex-mongo-pvc
      restartPolicy: Always
      volumes:
      - name: sharelatex-mongo-pvc
        persistentVolumeClaim:
          claimName: sharelatex-mongo-pvc
status: {}
