srv/sharelatex/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - image: redis
        name: redis
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: sharelatex-redis-pvc
      restartPolicy: Always
      volumes:
      - name: sharelatex-redis-pvc
        persistentVolumeClaim:
          claimName: sharelatex-redis-pvc
status: {}
