srv/sharelatex/sharelatex-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sharelatex
  name: sharelatex
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: sharelatex
    spec:
      containers:
      - env:
        - name: SHARELATEX_APP_NAME
          value: Our ShareLaTeX
        - name: SHARELATEX_MONGO_URL
          value: mongodb://mongo/sharelatex
        - name: SHARELATEX_REDIS_HOST
          value: redis
        - name: SHARELATEX_NAV_TITLE
          value: 'ShareLaTeX do IFSC - SJE'
        - name: SHARELATEX_HEADER_IMAGE_URL
          value: 'http://www.sj.ifsc.edu.br/images/stories/siteimagens/sao_jose_horizontal_marca2015_png.png'
        - name: SHARELATEX_LEFT_FOOTER
          value: '[{\"text\": \"Implementado e mantido pela equipe da CTIC-SJE. Em fase de testes.\"} ]'
        - name: SHARELATEX_ADMIN_EMAIL
          value: 'ctic.sj@ifsc.edu.br'
        - name: SHARELATEX_EMAIL_FROM_ADDRESS
          value: 'suporte.ti.sje@ifsc.edu.br'
        - name: SHARELATEX_EMAIL_SMTP_HOST
          value: 'smtp.ifsc.edu.br'
        - name: SHARELATEX_EMAIL_SMTP_PORT
          value: '465'
        - name: SHARELATEX_EMAIL_SMTP_USER
          value: 'ctic.sj'
        - name: SHARELATEX_EMAIL_SMTP_PASS
          valueFrom:
            secretKeyRef:
              name: ctic-secret
              key: cticsj_email_password
        - name: SHARELATEX_EMAIL_SMTP_SECURE
          value: 'true'
        - name: SHARELATEX_EMAIL_SMTP_TLS_REJECT_UNAUTH
          value: 'true'
        - name: SHARELATEX_EMAIL_SMTP_IGNORE_TLS
          value: 'true'
        - name: SHARELATEX_SITE_LANGUAGE
          value: 'pt'
        image: sharelatex/sharelatex
        name: sharelatex
        ports:
        - containerPort: 80
        resources: {}
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /var/lib/sharelatex
          name: sharelatex-sharelatex-pvc
      restartPolicy: Always
      volumes:
      - name: sharelatex-sharelatex-pvc
        persistentVolumeClaim:
          claimName: sharelatex-sharelatex-pvc
      - name: ctic-secret
        secret:
          secretName: ctic-secret
status: {}
