srv/sharelatex/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharelatex-mongo
spec:
  ports:
  - name: mongo
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: sharelatex-mongo

---

apiVersion: v1
kind: Service
metadata:
  name: sharelatex-redis
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: sharelatex-redis

---

apiVersion: v1
kind: Service
metadata:
  name: sharelatex
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sharelatex-sharelatex
