srv/sharelatex/sharelatex-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sharelatex
  name: sharelatex
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: sharelatex
status:
  loadBalancer: {}
